<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="joseduin.petagram.Acerca_de">

    <include android:id="@+id/miActionbarAcerca_de"
        layout="@layout/toolbar"></include>

    <TextView
        android:text="@string/acerca_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titulo_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colornegro"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:text="@string/nombre_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/apellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colornegro"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:text="@string/apellido_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colornegro"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:text="@string/edad_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/dedicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colornegro"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:text="@string/dedicacion_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/pais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colornegro"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:text="@string/pais_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
