<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configurar_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="joseduin.petagram.ConfigurarCuenta">

    <include android:id="@+id/miActionbarConfigurarCuenta"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/petagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titulo_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribe_un_usuario"
            hintTextAppearance="@style/AppTheme.FloatingLabel">

            <EditText
                android:id="@+id/text_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/guardar_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MiBotonRaised"
            android:id="@+id/botonGuardarCuenta" />

    </LinearLayout>

</LinearLayout>
